--- a/lights.css
+++ b/lights.css
@@ -1,45 +1,102 @@
 @keyframes floating {
-    from {
-      top: 0;
-    }
-    to {
-      top: -20px;
-    }
-  }
-  body {
-    background-color: #111;
-  }
-  
-  div {
-    position: relative;
-    border-radius: 50%;
-    width: 6rem;
-    height: 6rem;
-    margin: 10% 0 0 30%;
-    animation: floating 2s ease-out infinite alternate;
-  }
-  
-  .red {
-    left: 3rem;
-    background-color: #501;
-    background-image: radial-gradient(#fee, #f11);
-    box-shadow: 0 0 70px 10px red;
-  }
-  
-  .green {
-    left: 12rem;
-    background-color: #150;
-    animation-delay: 1s;
-    background-image: radial-gradient(#efe, #1f1);
-    box-shadow: 0 0 70px 10px green;
-    transform: translateY(30px);
-  }
-  
-  .blue {
-    left: 25rem;
-    background-color: #150;
-    animation-delay: -1s;
-    background-image: radial-gradient(#eef, #11f);
-    box-shadow: 0 0 70px 10px blue;
-    transform: translateY(-350px);
-  }
+	from {
+		top: 0;
+	}
+	to {
+		top: 5vh;
+	}
+}
+
+body {
+	background-color: #111;
+}
+
+.wrapper {
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.light:nth-child(7n) {
+	transform: translateY(10vh);
+}
+
+.light:nth-child(7n + 1) {
+	transform: translateY(40vh);
+}
+
+.light:nth-child(7n + 2) {
+	transform: translateY(60vh);
+}
+
+.light:nth-child(7n + 3) {
+	transform: translateY(20vh);
+}
+
+.light:nth-child(7n + 4) {
+	transform: translateY(50vh);
+}
+
+.light:nth-child(7n + 5) {
+	transform: translateY(30vh);
+}
+
+.light:nth-child(7n + 6) {
+	transform: translateY(60vh);
+}
+
+.light:nth-child(7n) {
+	animation-delay: 2s;
+}
+
+.light:nth-child(7n + 1) {
+	animation-delay: 1.5s;
+}
+
+.light:nth-child(7n + 2) {
+	animation-delay: -1s;
+}
+
+.light:nth-child(7n + 3) {
+	animation-delay: -2s;
+}
+
+.light:nth-child(7n + 4) {
+	animation-delay: 0.5s;
+}
+
+.light:nth-child(7n + 5) {
+	animation-delay: 0s;
+}
+
+.light:nth-child(7n + 6) {
+	animation-delay: -0.5s;
+}
+
+.red,
+.green,
+.blue {
+	position: relative;
+	display: inline-block;
+	border-radius: 50%;
+	width: 4vw;
+	aspect-ratio: 1;
+	animation: floating 3s ease-out infinite alternate;
+}
+
+.red {
+	background-color: #501;
+	background-image: radial-gradient(#fee, #f11);
+	box-shadow: 0 0 70px 10px red;
+}
+
+.green {
+	background-color: #150;
+	background-image: radial-gradient(#efe, #1f1);
+	box-shadow: 0 0 70px 10px green;
+}
+
+.blue {
+	background-color: #150;
+	background-image: radial-gradient(#eef, #11f);
+	box-shadow: 0 0 70px 10px blue;
+}
